WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
187752
[JSC] Root wrapper object in JSON.stringify is not necessary if replacer is not callable
https://bugs.webkit.org/show_bug.cgi?id=187752
Summary
[JSC] Root wrapper object in JSON.stringify is not necessary if replacer is n...
Yusuke Suzuki
Reported
2018-07-18 04:27:13 PDT
[JSC] Root wrapper object in JSON.stringify is not necessary if replacer is not callable
Attachments
Patch
(4.25 KB, patch)
2018-07-18 04:35 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2018-07-18 04:35:37 PDT
Created
attachment 345236
[details]
Patch
Mark Lam
Comment 2
2018-07-18 11:02:54 PDT
Comment on
attachment 345236
[details]
Patch r=me
Yusuke Suzuki
Comment 3
2018-07-18 11:10:50 PDT
Comment on
attachment 345236
[details]
Patch Thanks!
WebKit Commit Bot
Comment 4
2018-07-18 11:27:14 PDT
Comment on
attachment 345236
[details]
Patch Clearing flags on attachment: 345236 Committed
r233917
: <
https://trac.webkit.org/changeset/233917
>
WebKit Commit Bot
Comment 5
2018-07-18 11:27:16 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2018-07-18 11:31:01 PDT
<
rdar://problem/42343813
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug